# SecureScan-Application-Security-Tool-

./: .bandit.yml  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  securescanner-report.html  securescanner-report.json
.github/workflows/: security-scan.yml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
securescanner/: __init__.py  __main__.py  cli.py  owasp_mapper.py  report_generator.py  scanner.py
securescanner/mappings/: __init__.py  cwe_to_owasp.json
templates/: report.html
tests/: test_owasp_mapper.py  test_report_generator.py  test_scanner.py
tests/sample_vulnerable/: vulnerable_app.py
